-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
3
-
e3a72c601 (dev), 109b49a75 (6.9), b41ccbb0c (6.8)
-
Foundation Sprint 125
QtConnectivity cannot be linked statically anymore because QtGui now duplicates a class with same signature:
$ nm libQt6Gui.a | grep OrgFreedesktopDBusPropertiesInterface | grep qt_metacall 0000000000000000 T _ZN37OrgFreedesktopDBusPropertiesInterface11qt_metacallEN11QMetaObject4CallEiPPv $ nm libQt6Bluetooth.a | grep OrgFreedesktopDBusPropertiesInterface | grep qt_metacall 0000000000000000 T _ZN37OrgFreedesktopDBusPropertiesInterface11qt_metacallEN11QMetaObject4CallEiPPv
This was introduced by 50aaa93c8590 (qtbase)
- resulted in
-
QTBUG-133611 qdbusxml2cpp: add support for custom namespaces
-
- Closed
-
-
QTBUG-134305 Use new qdbusxml2cpp --namespace parameter in Qt
-
- Closed
-
For Gerrit Dashboard: QTBUG-133553 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
623390,2 | BlueZ: rename generated DBus propperites interface class | dev | qt/qtconnectivity | Status: MERGED | +2 | +1 |
623942,2 | BlueZ: rename generated DBus propperites interface class | 6.9 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
624086,2 | BlueZ: rename generated DBus propperites interface class | 6.8 | qt/qtconnectivity | Status: MERGED | +2 | 0 |